--- a/style.css
+++ b/style.css
@@ -153,7 +153,11 @@ body{
 }
 
 .remove-icon{
-	padding-left: 10px;
+	/*paddging 0 makes button recoginitioni area smaller*/
+	padding: 0;
+	margin-left: 10px;
+	margin-top: 5px;
+	height: 17px;
 }
 
 .remove-btn{
